[package]
name = "dll-spider"
version = "0.1.0"
edition = "2021"
description = "Lightweight DLL injector written in Rust."
readme = "README.md"
license = "GNU General Public License v3.0 only"
# license-file = "LICENSE"
keywords = ["dll-injection"]
authors = ["Stefano Cuizza <stefano.cuizza@protonmail.com>"]
categories = ["command-line-utilities", "memory-management", "os::windows-apis"]
repository = "https://github.com/x55xaa/dll-spider"
publish = false

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dunce = "1.0.5"
env_logger = "0.10"
log = "0.4"
tabled = "0.18.0"

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
]

[dependencies.windows-strings]
version = "0.3"
